--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>ChatGPT for Google</title>
+    <title>NectarGPT for Everything</title>
     <style>
       html {
         width: 400px;
